# test_virtual_inheritance

./: CMakeLists.txt  README.md  classes.h  main.cpp
classes/: CMakeLists.txt  classes.cpp  classes.h
doc/: CMakeLists.txt
test/: CMakeLists.txt  test_classes.cpp
